--- a/views/index.ejs
+++ b/views/index.ejs
@@ -165,6 +165,6 @@ karim,100005625557918</textarea>
 
 
 <%- include( "partials/script" ); %>
-<script src="index.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
